syntax = "proto3";

package report_proto;

option go_package = "proto/generated";

service ReportService {
  rpc GetReportPrice (PriceParams) returns (ReportResponse){}
  rpc GetReportHarvest (HarvestParams) returns (ReportResponse){}
}

// Struktur data yang digunakan
message PriceParams {
  string commodity_id = 1;
  int64 city_id = 2;
  string start_date = 3;
  string end_date = 4;
}

message HarvestParams {
  string land_commodity_id = 1;
  string start_date = 2;
  string end_date = 3;
}

// Response dari report service
message ReportResponse {
  string report_url = 1;
}
